tests/fail/parse-error-001.virtue
func (a int, b int) int
    return a + b

# error: parse error
#  --> test.virtue:1:6
#    |
#  1 | func (a int, b int) int
#    |      ^ expected identifier
#
